The engine comes with the client
A Java client is Java and the engine is a shared library, so until now
using this meant installing a libzu by hand and telling the JVM where it
went. One more dependency now does it: zudb-native carries a build for
every platform this client supports, Library.find looks for one on the
class path, and a resource is copied to a temp file because no loader on
any platform can map a resource.

Eight artifacts come out of one module and one staged directory, so they
cannot disagree about what is in them. The one with no classifier holds
all seven platforms and is what a program developed on a laptop and
deployed to a cluster wants, and the only one that survives being shaded.
The seven classified ones hold one platform each, which is what a
container image that knows what it runs on wants.

Alpine is a platform rather than a smaller Linux: a shared object built
against glibc does not load on musl, and says so in a message about an
interpreter rather than about a database. Library.flavour picks between
the two by looking for musl's own loader, which is the one path the ABI
fixes rather than a distribution.

Two things a user meets go with it. On the module path nothing requires
this artifact, because there is no code in it to require, so a jar that
is on the path is never resolved and its library is invisible; the search
notices it is on a module path and names --add-modules dev.zudb.natives
rather than leaving a user to work out why a class path run worked. And
the derived automatic module name would be zudb.native, which is not a
legal module name because native is a keyword, so every jar carries
Automatic-Module-Name in its manifest.

The search now also carries the places it ruled out, and Zu.source says
which of the four answered, because a path on its own does not explain
why the wrong engine is loaded and a property somebody set three shells
ago is exactly the thing that explains it.

Nothing in the test suite could check the claim 